--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -15,13 +15,17 @@
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.10",
     "@types/node": "^10.11.4",
+    "algorithmia": "^0.3.10",
     "aws-sdk": "^2.348.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.6",
+    "request": "^2.88.0",
+    "shortid": "^2.2.14",
     "telegraf": "^3.25.0",
+    "telegraf-session-mongodb": "^1.0.1",
     "typescript": "^3.1.1"
   },
   "devDependencies": {
